Fixed iPad image in dark mode.

--- a/gatsby-site/src/components/sass/sections/work.sass
+++ b/gatsby-site/src/components/sass/sections/work.sass
@@ -12,13 +12,13 @@ body
     .case-panel, .case-details
       .iphone-panel
         .iphone-frame
-          background: url('/images/iphone-frame-white.svg') no-repeat
+          background-image: url('/images/iphone-frame-white.svg')
       .ipad-container
         &:before
           background: $dm-secondary-color-opaque
         .ipad-panel
           .ipad-frame
-            background: url('/images/ipad-frame-white.svg') no-repeat
+            background-image: url('/images/ipad-frame-white.svg')
 section.work
   background: $secondary-color
   padding-top: 20px
